--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --recursive --require babel-core/register --require ./test-setup.js 'src/**/*-tests.js'",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "lint": "eslint src/",
+    "build": "babel src/ --out-dir lib/"
   },
   "author": "Daniel Lundin <d-dog@d-dog.se>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.8.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "dirty-chai": "^1.2.2",
+    "eslint": "^3.7.1",
+    "eslint-plugin-babel": "^3.3.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
