--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spring-array",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Array tweener with built-in spring",
   "main": "lib/index.js",
   "module": "src/index.js",
@@ -28,5 +28,5 @@
     "sinon-chai": "^2.8.0",
     "webpack": "^1.13.0"
   },
-  "files": ["lib/"]
+  "files": ["lib/", "src/"]
 }
