--- a/package.json
+++ b/package.json
@@ -16,19 +16,16 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.8.0",
-    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "dirty-chai": "^1.2.2",
-    "eslint": "^3.7.1",
-    "eslint-plugin-babel": "^3.3.0",
+    "eslint": "^4.19.1",
     "md2ghp": "0.0.6",
     "mocha": "^2.4.5",
     "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0",
-    "webpack": "^1.13.0"
+    "sinon-chai": "^2.8.0"
   },
   "files": [
     "lib/",
